--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -123,14 +123,11 @@ p {
 <h1>Palio's Pizza</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2 Wow this is cool</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5 This is cool</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+  <div class="col-lg-3 col-md-6"><p>The Classic pizza has roasted chicken, fresh tomatoes, fresh basil, fresh garlic, virgin olive oil and mozzarella. This is my favorite selection because the chicken is all white meat and the ingredients are fresh.</p></div>
+  <div class="col-lg-3 col-md-6"><p>The Mediterranean has Baby spinach, Roma tomatoes, red onions, fresh mushrooms, artichoke hearts, feta and mozzarella. This is my roommates favorite pizza because he is a vegetarian. I don’t like this pie because it has artichokes, but I like the feta.</p></div>
+  <div class="col-lg-3 col-md-6"><p>The King has pepperoni, sausage, ham, fresh mushrooms, black olives, onions and red, yellow and green peppers. This is my son’s favorite pie. He loves a diet rich in protein. I will eat this pizza but I prefer one with less red meat.  I fear a heart attack will be in my future if I indulge too much on this royal choice.
+</p></div>
+
 </div>
 
 </body>
